latex2mmlc/tests/snapshots/wiki_test__wiki135.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\left ( \\frac{a}{b} \\right )"
---
<math>
    <mrow>
        <mo stretchy="true">(</mo>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mo stretchy="true">)</mo>
    </mrow>
</math>
