latex2mmlc/tests/snapshots/wiki_test__wiki136.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\left [ \\frac{a}{b} \\right ] \\quad \\left \\lbrack \\frac{a}{b} \\right \\rbrack"
---
<math>
    <mrow>
        <mo>[</mo>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mo>]</mo>
    </mrow>
    <mspace width="1em"/>
    <mrow>
        <mo>[</mo>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mo>]</mo>
    </mrow>
</math>
