latex2mmlc/tests/snapshots/wiki_test__wiki137.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\left \\{ \\frac{a}{b} \\right \\} \\quad \\left \\lbrace \\frac{a}{b} \\right \\rbrace"
---
<math>
    <mrow>
        <mo stretchy="true" form="prefix">{</mo>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mo stretchy="true" form="postfix">}</mo>
    </mrow>
    <mspace width="1em"/>
    <mrow>
        <mo stretchy="true" form="prefix">{</mo>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mo stretchy="true" form="postfix">}</mo>
    </mrow>
</math>
