latex2mmlc/tests/snapshots/wiki_test__wiki142.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\left\\uparrow\\frac{a}{b}\\right\\downarrow\\; \\left\\Uparrow\\frac{a}{b}\\right\\Downarrow\\; \\left \\updownarrow \\frac{a}{b} \\right \\Updownarrow"
---
<math>
    <mrow>
        <mo stretchy="true">↑</mo>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mo stretchy="true">↓</mo>
    </mrow>
    <mspace width="0.2778em"/>
    <mrow>
        <mo stretchy="true">⇑</mo>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mo stretchy="true">⇓</mo>
    </mrow>
    <mspace width="0.2778em"/>
    <mrow>
        <mo stretchy="true">↕</mo>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mo stretchy="true">⇕</mo>
    </mrow>
</math>
