latex2mmlc/tests/snapshots/wiki_test__wiki143.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\left [ 0,1 \\right ) \\left \\langle \\psi \\right |"
---
<math>
    <mrow>
        <mo stretchy="true" form="prefix">[</mo>
        <mn>0,1</mn>
        <mo stretchy="true" form="postfix">)</mo>
    </mrow>
    <mrow>
        <mo stretchy="true" form="prefix">⟨</mo>
        <mi>ψ</mi>
        <mo stretchy="true" form="postfix">|</mo>
    </mrow>
</math>
